@@ -1,3 +1,7 @@
+2006-07-20  Sam Steingold  <sds@podval.org>
+
+	* loop.tst: added tests for initially/across interaction
+
 2006-07-19  Sam Steingold  <sds@podval.org>
 
 	* streams.tst: avoid a race condition in a file-write-date test
